# cdp-data

./: .buildinfo  .cookiecutter.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  LICENSE  MANIFEST.in  Makefile  README.md  basic_queries.sql  capstone-plan.md  cdp_data.bin.html  cdp_data.bin.research.html  cdp_data.html  cdp_data.utils.html  codecov.yml  contributing.html  extract_to_csv_and_sqlite.py  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: cdp_data.bin.doctree  cdp_data.bin.research.doctree  cdp_data.doctree  cdp_data.utils.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-docs.yml  ci.yml  docs.yml
Notebooks/: historical_vote_proportions.ipynb  transcript_dataframe_builder.ipynb
Notebooks/King-County-WA/: Historical_Vote_Proportions_King_County.ipynb
Notebooks/Seattle-WA/: Historical_Vote_Proportions_Seattle.ipynb
_modules/: cdp_data.html  index.html
_modules/cdp_data/: datasets.html  instances.html  keywords.html  main.html  utils.html
_modules/cdp_data/utils/: db_utils.html  fs_utils.html  incremental_average.html
_sources/: cdp_data.bin.research.rst.txt  cdp_data.bin.rst.txt  cdp_data.rst.txt  cdp_data.utils.rst.txt  index.rst.txt  modules.rst.txt
_static/: documentation_options.js
cdp_data/: __init__.py  constants.py  dataset.py  datasets.py  instances.py  keywords.py  main.py  matters.py  plots.py
cdp_data/tests/: __init__.py  conftest.py  test_datasets.py  test_keywords.py  test_keywords_and_plotting.py  voting_analysis.py
cdp_data/tests/utils/: __init__.py  test_incremental_average.py
cdp_data/utils/: __init__.py  db_utils.py  fs_utils.py  incremental_average.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat
notebooks/: historical_vote_proportions.ipynb  plot_keyword_history.ipynb
scripts/: generate-readme-figs.py
